fix: modal input should not have overflowing content

--- a/client/src/style/Modal.css
+++ b/client/src/style/Modal.css
@@ -7,9 +7,17 @@
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+}
+
+.modal > label {
+    text-align: center;
 }
 
 .modalBackground {
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
+}
+
+.modalContent {
+    align-items: left;
 }
